--- a/FunnyGif/FunnyGif.App/FunnyGif.App.Android/FunnyGif.App.Android.csproj
+++ b/FunnyGif/FunnyGif.App/FunnyGif.App.Android/FunnyGif.App.Android.csproj
@@ -67,9 +67,7 @@
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
-    <None Include="Properties\AndroidManifest.xml">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Tabbar.axml" />
