Updating url to localhost and template of the Xamarin UI

--- a/FunnyGif/FunnyGif/FunnyGif.csproj
+++ b/FunnyGif/FunnyGif/FunnyGif.csproj
@@ -5,8 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App">
+      <PrivateAssets Condition="'%(PackageReference.Version)' == ''">all</PrivateAssets>
+      <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNet.SignalR.JS" Version="2.4.1" />
   </ItemGroup>
 
 </Project>
